build/errors/testdata/import-already-exists.q
import sys
import sys

main() {}
